<resources>
    <string name="app_name">MyJetPackComponent</string>
    <string name="welcome"> Welcome</string>
    <string name="livedata"> LiveData &amp; ROOM</string>
    <string name="add_word">Add word</string>
    <string name="enter_word">Enter a word</string>
    <string name="add_new_words"> Add a new word</string>
    <string name="coroutine">Coroutine</string>
    <string name="data_bind">Data Binding</string>
    <string name="co_image">https://fsb.zobj.net/crop.php?r=GXrLO-3bmGrG7mK0ewwRYJQsyc0AJkx8xO3qFG5G7-f63AP5klmvIIL0f3T8ne5wSR64QJNMs0bSPgotAZmIp__tHtsZVITkFzZ-CjiCFubAag67tP-k1Q0y1PcGWiOU2Y7NnbRQIzhWsHiw</string>
    <string name="add_item">Add new name</string>
    <string name="edit_item">Edit name</string>
    <string name="name"> Name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="wmanager">Work Manager</string>
    <string name="pagination"> Pagination</string>

</resources>
